# docs/swagger.yaml
@@ -31,6 +31,15 @@ definitions:
       id:
         type: string
     type: object
+  client.GetDocumentTagsResponse:
+    properties:
+      document_id:
+        type: string
+      tags:
+        items:
+          type: string
+        type: array
+    type: object
 info:
   contact: {}
 paths:
@@ -64,6 +73,136 @@ paths:
       summary: Create a new Dicom Document
       tags:
       - create
+  /dicom_data/{id}/image:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves the image of a Dicom Document by its ID
+      parameters:
+      - description: Dicom Document ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: No document ID provided
+          schema:
+            type: string
+        "500":
+          description: Failed to generate image from document
+          schema:
+            type: string
+      summary: Get Dicom Document image by ID
+      tags:
+      - get
+  /dicom_data/{id}/tag:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves the data of a Dicom Header Attribute by its ID and a
+        DICOM tag
+      parameters:
+      - description: Dicom Document ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: DICOM Tag
+        in: body
+        name: tag
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Invalid request
+          schema:
+            type: string
+        "500":
+          description: Error getting dicom document
+          schema:
+            type: string
+      summary: Get Dicom Document data by ID and Tag
+      tags:
+      - get
+  /dicom_data/{id}/tag-name:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves the data of a Dicom Header Attribute by its ID and a
+        DICOM tag name
+      parameters:
+      - description: Dicom Document ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: DICOM Tag Name
+        in: body
+        name: tagName
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Invalid request
+          schema:
+            type: string
+        "500":
+          description: Error getting dicom document
+          schema:
+            type: string
+      summary: Get Dicom Document data by ID and Tag Name
+      tags:
+      - get
+  /dicom_data/{id}/tags:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves the tags of a Dicom Document by its ID
+      parameters:
+      - description: Dicom Document ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/client.GetDocumentTagsResponse'
+        "400":
+          description: No document ID provided
+          schema:
+            type: string
+        "500":
+          description: Error getting dicom document
+          schema:
+            type: string
+      summary: Get All Dicom Document tags by ID
+      tags:
+      - get
   /get/{id}:
     get:
       consumes:
